# OmegaRace

./: .gitignore  BUILD_README.md  CMakeLists.txt  README.md  REFACTORING_SUMMARY.md  WORKSPACE.md  build_release.sh  build_release_dmg.sh  compile_shaders.sh  format.sh  setup_bgfx.sh
Applications/OmegaRace/OmegaRace/: Info.plist  OmegaRace.entitlements
Applications/OmegaRace/OmegaRace.xcodeproj/: project.pbxproj
Applications/OmegaRace/OmegaRace/src/: AudioEngine.h  Borders.cpp  Borders.h  Common.cpp  Common.h  DoubleMine.cpp  DoubleMine.h  Enemy.cpp  Enemy.h  EnemyController.cpp  EnemyController.h  Entity.cpp  Explosion.cpp  ExplosionLine.cpp  ExplosionLine.h  Fighter.cpp  Fighter.h  FighterShip.h  FollowEnemy.cpp  FollowEnemy.h  Game.cpp  Game.h  GameController.cpp  GameController.h  LeadEnemy.cpp  LeadEnemy.h  Letter.cpp  Logger.cpp  Logger.h  Mine.cpp  Number.cpp  Player.cpp  Player.h  PlayerExplosionLine.cpp  PlayerShip.cpp  PlayerShip.h  PlayerShot.cpp  PlayerShot.h  Rock.cpp  Rock.h  (+15 more)
OmegaRace.xcodeproj/: project.pbxproj
OmegaRace.xcodeproj/xcshareddata/xcschemes/: OmegaRace.xcscheme
docs/: BUILD_README.md  WORKSPACE.md
resources/audio/: Master.strings.bank
resources/macos/: Info.plist  Info.plist.in
resources/shaders/: bloom.fs  fs_line.metal  fs_volumetric_line.metal  vs_line.metal  vs_volumetric_line.metal
scripts/: build.sh  build_release.sh  build_release_dmg.sh  build_release_xcode.sh  format.sh
src/: main.cpp
src/audio/: AudioEngine.cpp  AudioEngine.h
src/core/: Common.cpp  Common.h  Game.cpp  Game.h  GameController.cpp  GameController.h  Logger.cpp  Logger.h  Timer.cpp  Timer.h  Types.h  vmath.cpp
src/entities/: DoubleMine.cpp  Enemy.cpp  EnemyController.cpp  EnemyController.h  Entity.cpp  Entity.h  Fighter.cpp  Fighter.h  FollowEnemy.cpp  LeadEnemy.cpp  Mine.cpp  Mine.h  Player.cpp  Player.h  PlayerShot.cpp  Rock.cpp  Rock.h  Shot.cpp  Shot.h  UFO.cpp  UFO.h
src/graphics/: Borders.cpp  Borders.h  Explosion.cpp  Explosion.h  ExplosionLine.cpp  ExplosionLine.h  FighterShip.cpp  Letter.cpp  Letter.h  MetalLayerSetup.h  MetalLayerSetup.mm  Number.cpp  Number.h  PauseMenu.cpp  PauseMenu.h  PlayerExplosionLine.cpp  PlayerExplosionLine.h  PlayerShip.cpp  PlayerShip.h  Ship.cpp  Ship.h  StatusDisplay.cpp  StatusDisplay.h  TriShip.cpp  TriShip.h  VapourTrail.cpp  VapourTrail.h  Window.cpp  Window.h
src/input/: InputManager.cpp  InputManager.h
src/shaders/: fs_bloom.sc  fs_electric_barrier.sc  fs_grid.sc  fs_particle.sc  fs_shield.sc  fs_vapor_trail.sc  fs_volumetric_line.sc  fs_warp.sc  varying.def.sc  varying_particle.def.sc  vs_bloom.sc  vs_electric_barrier.sc
